sftp/1.3/modules/ROOT/pages/sftp-write.adoc
= Write a File Using the SFTP Connector - Mule 4
:page-aliases: connectors::sftp/sftp-write.adoc

Anypoint Connector for SFTP (SFTP Connector) Write operation writes content into the given path on demand.

== Configure the Operation in Studio

To add and configure the Write operation in Studio, follow these steps:

. In the *Mule Palette* view, search *SFTP* and select the *Write* operation.
. Drag the *Write* operation onto the Studio canvas.
. In the *General* tab of the operation configuration screen, click the plus sign (*+*) next to the *Connector configuration* field to access the global element configuration fields.
. Specify the connection information and click *OK*.
. In the *General* tab, set the *Path* field to `output.csv` to set the path of the file to write. +
By default, the connector writes whatever is in the message payload.

The following screenshot shows the *Write* operation configuration:

.Write operation configuration
image::sftp-write-operation-1.png[Write operation configuration in Studio]

In the XML editor, the configuration looks like this:
[source,xml,linenums]
----
<sftp:write path="output.csv" />
----


== Use Embedded DataWeave Transformations

If you place a Transform component before the Write operation, the message payload changes and that impacts the operation that is placed after the Write operation.
So if the payload is in a different format and you need to transform it before writing it, you can place the transformation inside the *Content* parameter of the Write operation to generate content to be written without producing a side effect on the message in transit.

The following example places the DataWeave transformation in the *Content* parameter:

.Write operation configuration with Content parameter
image::sftp-write-operation-2.png[Write operation configuration in Studio with Content parameter]

In the XML editor, the configuration looks like this:
[source,xml,linenums]
----
<sftp:write path="output.csv">
  <sftp:content>#[%dw 2.0
                   output application/csv
                   ---
                   payload.customers.email
                  ]
  </sftp:content>
</sftp:write>
----

== Write into Directories

The Write operation fails by default if you set inexistent directories in the *Path* parameter. Therefore, you can set the *Crete parent directories* parameter to `True (Default)` to automatically create any missing directories.

The following example shows that if any of the `a`, `b`, or `c` directories set in the *Path* field do not exist, the connector creates any of those missing directories:

.Write operation configuration with Create parent directories
image::sftp-write-operation-3.png[.Write operation configuration with Create parent directories]

In the XML editor, the configuration looks like this:

[source,xml]
----
<sftp:write path="a/b/c/myFile.txt" />
----

// INCLUDE FOR THESE SECTIONS:
// == Writing to Existing Files
// == Locks
include::partial$common-write.adoc[]

== See Also

xref:sftp-examples.adoc[SFTP Connector Examples]
