sftp/2.3/modules/ROOT/pages/sftp-write.adoc
= Write a File Using the SFTP Connector Example - Mule 4
:page-aliases: connectors::sftp/sftp-write.adoc

Anypoint Connector for SFTP (SFTP Connector) provides a *Write* operation that writes content into the given path on demand.

== Configure the Write Operation in Studio

To add and configure the *Write* operation in Studio, follow these steps:

. In the *Mule Palette* view, search for `sftp` and select the *Write* operation.
. Drag the *Write* operation onto the Studio canvas.
. In the *General* tab of the operation configuration screen, click the plus sign (*+*) next to the *Connector configuration* field to access the global element configuration fields.
. Specify the connection information and click *OK*.
. In the *General* tab, set the *Path* field to `output.csv` to set the path of the file to write. +
By default, the connector writes whatever is in the message payload.

image::sftp-write-operation-1.png[Write operation configuration in Studio]

In the *Configuration XML* editor, the `<sftp:write>` configuration looks like this:
[source,xml,linenums]
----
<sftp:write path="output.csv" />
----


== Use Embedded DataWeave Transformations

If you place a *Transform Message* component before the *Write* operation, the message payload changes, and that impacts the operation that is placed after the *Write* operation.
Therefore, if the payload is in a different format and you need to transform it before writing it, you can place the transformation inside the *Content* field of the *Write* operation to generate content to be written without affecting the message in transit.

The following example places the DataWeave transformation in the *Content* field:

image::sftp-write-operation-2.png[Write operation configuration in Studio with Content field]

In the *Configuration XML* editor, the configuration looks like this:
[source,xml,linenums]
----
<sftp:write path="output.csv">
  <sftp:content>#[%dw 2.0
                   output application/csv
                   ---
                   payload.customers.email
                  ]
  </sftp:content>
</sftp:write>
----

== Write into Directories

Because the *Write* operation fails by default if you set nonexistent directories in the *Path* field, set the *Create parent directories* field to *True (Default)* to automatically create any missing directories.

The following example shows that if any of the `a`, `b`, or `c` directories set in the *Path* field do not exist, the connector creates them:

image::sftp-write-operation-3.png[.Write operation configuration with Create parent directories]

In the *Configuration XML* editor, the configuration looks like this:

[source,xml]
----
<sftp:write path="a/b/c/myFile.txt" />
----

[[write-strategy]]
== Use Write Strategy

Use the *Write strategy* field to configure the strategy to write the file. You can configure the field to select either of these strategies: 

* `STANDARD` +
This is the default strategy that you can use in the `APPEND`, `OVERWRITE`, and `CREATE_NEW` modes.
* `CUSTOM` +
This strategy enables you to manually specify the offset for the server to write the file in `APPEND` mode, particularly only for older SFTP servers that do not directly support write modes.

Additionally, you can configure the buffer size for writing into the file via the *Buffer size for write strategy* field. 

[NOTE]
Use the `CUSTOM` write strategy only in `APPEND` mode as it is not applicable to the `OVERWRITE` or `CREATE_NEW` modes. Use this strategy only if the `STANDARD` strategy results in errors during file writing in `APPEND` mode. Concurrency is not maintained for servers that do not follow SFTP guidelines.

The following example shows the configuration for both fields:

image::sftp-write-operation-4.png["Write operation configuration with write strategy and buffer size for write strategy fields"]

In the *Configuration XML* editor, the configuration looks like this:

[source,xml]
----
<sftp:write  path="testFile.csv" mode="APPEND" writeStrategy="CUSTOM" bufferSizeForWriteStrategy="BUFFER_SIZE_16KB" config-ref="SFTP_Config"/>
----



// INCLUDE FOR THESE SECTIONS:
// == Writing to Existing Files
// == Locks
include::partial$common-write.adoc[]

== See Also

* xref:sftp-examples.adoc[SFTP Connector Examples]
* https://help.mulesoft.com[MuleSoft Help Center]
